--- a/.github/workflows/master_infinitycat.yml
+++ b/.github/workflows/master_infinitycat.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -51,5 +52,5 @@ jobs:
         with:
           app-name: 'InfinityCat'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A128864F5EA44E179C7A9A4A5BA98C1B }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6BECA55F3884425584DED2FC4842A85A }}
           package: .
